--- a/HotelFind/package.json
+++ b/HotelFind/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.6.4",
     "expo": "~54.0.25",
@@ -21,7 +22,11 @@
     "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/runtime": "^7.28.4",
     "@types/react": "~19.1.0",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
     "typescript": "~5.9.2"
   },
   "private": true
