--- a/HotelFind/package.json
+++ b/HotelFind/package.json
@@ -10,21 +10,29 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.8.6",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.6.4",
     "@reduxjs/toolkit": "^2.10.1",
+    "@supabase/supabase-js": "^2.87.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.25",
     "expo-status-bar": "~3.0.8",
+    "express": "^5.2.1",
+    "googleapis": "^167.0.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-redux": "^9.2.0"
+    "react-native-url-polyfill": "^3.0.0",
+    "react-redux": "^9.2.0",
+    "react-native-maps": "1.20.1",
+    "expo-location": "~19.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
