--- a/HotelFind/package.json
+++ b/HotelFind/package.json
@@ -33,12 +33,14 @@
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-image-picker": "~17.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/runtime": "^7.28.4",
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.72.8",
     "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
     "typescript": "~5.9.2"
