--- a/HotelFind/package.json
+++ b/HotelFind/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^17.2.3",
     "expo": "~54.0.25",
     "expo-image-picker": "~17.0.9",
+    "expo-local-authentication": "~17.0.8",
     "expo-location": "~19.0.8",
     "expo-status-bar": "~3.0.8",
     "express": "^5.2.1",
